<resources>
    <string name="app_name">大咖吸粉</string>

    <!-- 登录注册页面 -->
    <string name="register">注册</string>
    <string name="signin">登录</string>
    <string name="username">手机号:</string>
    <string name="userpwd">密 码:</string>
    <string name="verification">验证码：</string>
    <string name="get_verification">获取验证码</string>
    <string name="name_tip">请输入您的手机号</string>
    <string name="pwd_tip">请输入您的密码</string>
    <string name="code_tip">请输入您收到的验证码</string>
    <string name="phone_empty">手机号不能为空</string>
    <string name="phone_error">手机号格式错误</string>
    <string name="phone_no_record">手机号尚未注册</string>
    <string name="pwd_empty">密码不能为空</string>
    <string name="pwd_regex_error">密码格式错误</string>
    <string name="pwd_error">密码错误</string>
    <string name="no_network">网络连接失败，请检查网络</string>
    <string name="code_empty">验证码不能为空</string>
    <string name="code_error">验证码有误</string>


    <!--主页面-->
    <string name="get_fans">获取粉丝</string>

    <string name="connUrl">http://g.kakatong.com/d/update.xml</string>


    <!--权限相关-->
    <string name="no_permission_title">权限不可用</string>
    <string name="no_permission_contacts_tip">该功能需要写入通讯录权限，关闭权限将无法导出粉丝</string>
    <string name="permission_accept">确认开启</string>
    <string name="permission_refuse">拒绝</string>
</resources>
