<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.guanlan.daka.activities.RegisterActivity">

    <EditText
        android:id="@+id/registerPwd"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/pwd_tip"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/smsCode"
        app:layout_constraintRight_toRightOf="@+id/smsCode"
        app:layout_constraintTop_toBottomOf="@+id/smsCode"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/pwdView"
        android:layout_width="64dp"
        android:layout_height="18dp"
        android:text="@string/userpwd"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/registerPwd"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/registerPwd"
        android:layout_marginLeft="25dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/phoneView"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:text="@string/username"
        app:layout_constraintBaseline_toBaselineOf="@+id/registerPhone"
        app:layout_constraintLeft_toLeftOf="@+id/codeView"
        app:layout_constraintRight_toRightOf="@+id/pwdView"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/codeView"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:text="@string/verification"
        app:layout_constraintRight_toLeftOf="@+id/smsCode"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/smsCode"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/pwdView" />

    <Button
        android:id="@+id/register"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="goRegister"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/registerPhone"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/name_tip"
        android:inputType="phone"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/pwdView"
        app:layout_constraintRight_toRightOf="@+id/smsCode"
        android:layout_marginTop="116dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="116dp"
        app:layout_constraintLeft_toLeftOf="@+id/smsCode"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/smsCode"
        android:layout_width="193dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/code_tip"
        android:inputType="number"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="194dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.523" />

    <Button
        android:id="@+id/getCode"
        style="@android:style/Widget.Button.Small"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:onClick="getSMSCode"
        android:text="@string/get_verification"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBaseline_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/registerPhone" />

</android.support.constraint.ConstraintLayout>
