<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.guanlan.daka.activities.LoginActivity">

    <Button
        android:id="@+id/loginButton"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="79dp"
        android:layout_marginStart="79dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="login"
        android:text="@string/signin"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="105dp"
        app:layout_constraintHorizontal_bias="0.047"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="103dp"
        app:layout_constraintTop_toBottomOf="@+id/userPwd"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/registerButton"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="goRegister"
        android:text="@string/register"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="103dp"
        app:layout_constraintTop_toBottomOf="@+id/userPwd"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="105dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/userPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/name_tip"
        android:inputType="number"
        android:text=""
        app:layout_constraintLeft_toLeftOf="@+id/userPwd"
        app:layout_constraintRight_toRightOf="@+id/userPwd"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/userPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/pwd_tip"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPhone"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:text="@string/username"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/textPwd"
        app:layout_constraintBaseline_toBaselineOf="@+id/userPhone"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textPwd" />

    <TextView
        android:id="@+id/textPwd"
        android:layout_width="51dp"
        android:layout_height="17dp"
        android:text="@string/userpwd"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="38dp"
        app:layout_constraintBottom_toBottomOf="@+id/userPwd"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userPwd"
        android:layout_marginLeft="38dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="380dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="380dp"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>
